test/2-error/empty.test
{
  'compile-code': 1,
  'compile-err': '''\
syntax error: test/2-error/empty.ploy:1:1: empty main body; main requires a final Int exit code expression.
  
  ^
'''
}
